force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/Inventory_Perpetual_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Inventory Perpetual Adjustment</label>
    <nameField>
        <displayFormat>INV-{0000000000}</displayFormat>
        <label>Inventory Adjustments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Perpetual Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>