force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/fields/Bin_Location__c.field-meta.xml
<CustomField>
    <fullName>Bin_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bin Location</label>
    <referenceTo>Bin_Location__c</referenceTo>
    <relationshipLabel>Inventory Perpetual Adjustments</relationshipLabel>
    <relationshipName>Inventory_Perpetual_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>