force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/fields/Harvest_Batch_Code__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Batch_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Harvest Batch Code</label>
    <referenceTo>Harvest_Batch_Code__c</referenceTo>
    <relationshipLabel>Inventory Perpetual Adjustments</relationshipLabel>
    <relationshipName>Inventory_Perpetual_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>