force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/fields/Inventory_Position__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Position</label>
    <referenceTo>Inventory_Position__c</referenceTo>
    <relationshipLabel>Inventory Perpetual Adjustments</relationshipLabel>
    <relationshipName>Inventory_Perpetual_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>