force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/fields/New_balance_Qty__c.field-meta.xml
<CustomField>
    <fullName>New_balance_Qty__c</fullName>
    <label>New balance Qty</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>