force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/fields/Old_balance_Qty__c.field-meta.xml
<CustomField>
    <fullName>Old_balance_Qty__c</fullName>
    <label>Old balance Qty</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>