force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Product Name</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventory Perpetual Adjustments</relationshipLabel>
    <relationshipName>Inventory_Perpetual_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>