force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Total quantity adjusted</inlineHelpText>
    <label>Quantity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>