force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/fields/Rack_Level__c.field-meta.xml
<CustomField>
    <fullName>Rack_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rack Level</label>
    <referenceTo>Rack_Level__c</referenceTo>
    <relationshipLabel>Inventory Perpetual Adjustments</relationshipLabel>
    <relationshipName>Inventory_Perpetual_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>