force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/fields/Reason_for_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Adjustments__c</fullName>
    <label>Reason for Adjustments</label>
    <type>TextArea</type>
</CustomField>