force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/fields/Receiving_Line__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving Line</label>
    <referenceTo>Receiving_Line__c</referenceTo>
    <relationshipLabel>Inventory Perpetual Adjustments</relationshipLabel>
    <relationshipName>Inventory_Perpetual_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>