force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allocate Supplier Items</fullName>
            </value>
            <value>
                <fullName>Cycle Count Variance</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Inspection - Damaged</fullName>
            </value>
            <value>
                <fullName>Incoming Inspection Reject</fullName>
            </value>
            <value>
                <fullName>Issue Customer Items Pick-list</fullName>
            </value>
            <value>
                <fullName>Issue Supplier Items Pick-list</fullName>
            </value>
            <value>
                <fullName>Item Transfer Inbound</fullName>
            </value>
            <value>
                <fullName>Item Transfer Outbound</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Issue</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Receipt</fullName>
            </value>
            <value>
                <fullName>Receive Customer Returned Material</fullName>
            </value>
            <value>
                <fullName>Reverse Allocate Supplier Items</fullName>
            </value>
            <value>
                <fullName>Reverse Customer Allocation</fullName>
            </value>
            <value>
                <fullName>Reverse Cycle Count</fullName>
            </value>
            <value>
                <fullName>Reverse Issue Customer Items Pick-list</fullName>
            </value>
            <value>
                <fullName>Reverse Issue Supplier Items Pick-List</fullName>
            </value>
            <value>
                <fullName>Reverse Item Transfer Inbound</fullName>
            </value>
            <value>
                <fullName>Reverse Item Transfer Outbound</fullName>
            </value>
            <value>
                <fullName>Reverse Miscellaneous Issue</fullName>
            </value>
            <value>
                <fullName>Reverse Receive Customer Returned Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>