force-app/main/default/objects/Inventory_Perpetual_Adjustment__c/fields/UID_New__c.field-meta.xml
<CustomField>
    <fullName>UID_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UID</label>
    <referenceTo>UID__c</referenceTo>
    <relationshipLabel>Inventory Perpetual Adjustments</relationshipLabel>
    <relationshipName>Inventory_Perpetual_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>